--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 </head>
 <body>
     <h1>Higoverse Data center</h1>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla in corrupti commodi ipsam dignissimos mollitia vitae inventore, accusamus alias, voluptatibus illum qui soluta nemo tempora, odio sequi doloremque a modi.
+    </p>
 </body>
 </html>
