--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 </head>
 <body>
     <h1>Higoverse Data center</h1>
-    <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla in corrupti commodi ipsam dignissimos mollitia vitae inventore, accusamus alias, voluptatibus illum qui soluta nemo tempora, odio sequi doloremque a modi.
-    </p>
+     <video autoplay muted loop playsinline
+                class="absolute inset-0 w-full h-full object-cover brightness-75">
+                <source src="assets/bg.mp4" type="video/mp4" />
+                <!-- fallback image -->
+                Sorry, your browser does not support the video tag.
+    </video>
 </body>
 </html>
